--- a/Backend/ProjetFinal/ProjetFinal.csproj
+++ b/Backend/ProjetFinal/ProjetFinal.csproj
@@ -79,6 +79,7 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IdentityModel" />
     <Reference Include="System.IdentityModel.Tokens.Jwt, Version=7.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.7.2.0\lib\net461\System.IdentityModel.Tokens.Jwt.dll</HintPath>
     </Reference>
@@ -209,15 +210,11 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\ArticleController.cs" />
-    <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\CommandeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="DAL\Article.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="DAL\Auth.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="DAL\Client.cs">
@@ -231,7 +228,6 @@
     <Compile Include="Models\Clients\IToken.cs" />
     <Compile Include="Models\Clients\RegisterModel.cs" />
     <Compile Include="DAL\DaoArticle.cs" />
-    <Compile Include="DAL\DaoAuth.cs" />
     <Compile Include="DAL\DaoClient.cs" />
     <Compile Include="DAL\DaoCommande.cs" />
     <Compile Include="DAL\Model.Context.cs">
@@ -255,7 +251,8 @@
     <Compile Include="Models\Clients\LoginModel.cs" />
     <Compile Include="Models\Token\JwtManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\AuthService.cs" />
+    <Compile Include="Services\ClientService.cs" />
+    <Compile Include="Services\Utils\Helpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
