--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -26,7 +26,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js",
             "node_modules/bootstrap/dist/js/bootstrap.js"]
@@ -99,5 +99,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "d2a3f24c-c21b-4724-babe-1027c9f7caef"
   }
 }
