--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -25,8 +25,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
+              "src/styles.css"
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js",
             "node_modules/bootstrap/dist/js/bootstrap.js"]
@@ -99,5 +98,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "9dc7f202-17b6-4cde-b455-db42906a3dd6"
   }
 }
