--- a/Backend/ProjetFinal/ProjetFinal.csproj
+++ b/Backend/ProjetFinal/ProjetFinal.csproj
@@ -45,6 +45,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=6.2.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.6.2.2\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="BCrypt.Net-Next, Version=4.0.3.0, Culture=neutral, PublicKeyToken=1e11be04b6288443, processorArchitecture=MSIL">
+      <HintPath>..\packages\BCrypt.Net-Next.4.0.3\lib\net35\BCrypt.Net-Next.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -209,6 +215,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Authorization\AllowAnonymousAttribute.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\ArticleController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\CommandeController.cs" />
@@ -223,10 +231,13 @@
     <Compile Include="DAL\Commande.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\AppSettings.cs" />
+    <Compile Include="Helpers\PasswordHasher.cs" />
+    <Compile Include="Models\Clients\LoginResponse.cs" />
     <Compile Include="Models\Clients\ClientRoles.cs" />
-    <Compile Include="Models\Clients\IClient.cs" />
-    <Compile Include="Models\Clients\IToken.cs" />
-    <Compile Include="Models\Clients\RegisterModel.cs" />
+    <Compile Include="Authorization\AuthorizeAttribute.cs" />
+    <Compile Include="Models\Token\IToken.cs" />
+    <Compile Include="Models\Clients\RegisterRequest.cs" />
     <Compile Include="DAL\DaoArticle.cs" />
     <Compile Include="DAL\DaoClient.cs" />
     <Compile Include="DAL\DaoCommande.cs" />
@@ -248,8 +259,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Clients\LoginModel.cs" />
-    <Compile Include="Models\Token\JwtManager.cs" />
+    <Compile Include="Models\Clients\LoginRequest.cs" />
+    <Compile Include="Models\Clients\UpdateRequest.cs" />
+    <Compile Include="Helpers\JwtManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ClientService.cs" />
     <Compile Include="Services\Utils\Helpers.cs" />
@@ -301,6 +313,7 @@
     <Content Include="DAL\Model.edmx.diagram">
       <DependentUpon>Model.edmx</DependentUpon>
     </Content>
+    <Content Include="appsettings.json" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -324,6 +337,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="NewFolder1\" />
+    <Folder Include="Views\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
