--- a/Backend/ProjetFinal/packages.config
+++ b/Backend/ProjetFinal/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
+  <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
+  <package id="BCrypt.Net-Next" version="4.0.3" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="EntityFramework.fr" version="6.2.0" targetFramework="net461" />
